# fix-und-fertig

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: db.rs  lib.rs  tree.rs  workspace.rs
src/cli/: mod.rs  utils.rs
src/cli/commands/: db.rs  misc.rs  mod.rs
tests/: helpers.rs  init.rs
