[package]
name = "fix-und-fertig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
cap-std = "3.0.0"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"

[dev-dependencies]
tempfile = "3.9.0"
